--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,7 @@ body, html {
   background-image: url('gorna_czesc_zawartosci.gif');
   height: 17px;
   width: 1004px;
+  background-color: rosybrown;
 }
 .foot{
   background-image: url('dolna_czesc_zawartosci.gif');
@@ -45,7 +46,7 @@ body, html {
 .grid-container {
   display: grid;
   width: 60%;
-  grid-template-columns: 200px auto;
+  grid-template-columns: 150px auto;
   text-align: left;
 }
 
