--- a/src/style.css
+++ b/src/style.css
@@ -1,29 +1,28 @@
 body, html {
-  height: 100%;
+  height: 400px;
   background: rgba(247,234,212,0.95);
   background: linear-gradient(135deg, rgba(247,234,212,0.95) 0%, rgba(232,189,115,0.96) 25%, rgba(223,155,38,0.96) 53%, rgba(242,208,114,0.97) 82%, rgba(241,218,177,0.97) 100%);
 
   background-position: top;  
   font-family: Calibri,Tahoma, Arial;	
 	font-style: italic;
-  
 }
 .bg {
-  background-image: url('IMG/srodkowa_czesc_zawartosci.gif');
+  background-image: url('../src/Img/srodkowa_czesc_zawartosci.gif');
   background-repeat: repeat;
 }
 .up{
-  background-image: url('IMG/gorna_czesc_zawartosci.gif');
+  background-image: url('../src/Img/gorna_czesc_zawartosci.gif');
   height: 17px;
   width: 1004px;
 }
 .foot{
-  background-image: url('IMG/dolna_czesc_zawartosci.gif');
+  background-image: url('../src/Img/dolna_czesc_zawartosci.gif');
   height: 31px;
   width: 1004px;
 }
 .down{
-  background-image: url('IMG/dol.gif');
+  background-image: url('../src/Img/dol.gif');
   height: 10px;
   width: 1004px;
 }
