--- a/src/style.css
+++ b/src/style.css
@@ -1,28 +1,32 @@
 body, html {
-  height: 400px;
-  background: rgba(247,234,212,0.95);
-  background: linear-gradient(135deg, rgba(247,234,212,0.95) 0%, rgba(232,189,115,0.96) 25%, rgba(223,155,38,0.96) 53%, rgba(242,208,114,0.97) 82%, rgba(241,218,177,0.97) 100%);
-
+  height: 100%;
+  background: rgb(47,142,196);
+background: linear-gradient(270deg, rgba(47,142,196,1) 0%, rgba(199,238,254,1) 15%, rgba(236,249,255,1) 53%, rgba(199,238,254,1) 85%, rgba(47,142,196,1) 100%);
+  background-image: url('https://i.postimg.cc/R0TG04j3/Bez-nazwy.png');
+  background: rgb(199,238,254);
+background: linear-gradient(270deg, rgba(199,238,254,1) 0%, rgba(199,238,254,1) 15%, rgba(236,249,255,1) 53%, rgba(199,238,254,1) 85%, rgba(147,211,249,0.9279061966583508) 100%);
+  background: rgb(106,195,246);
+background: linear-gradient(270deg, rgba(106,195,246,1) 0%, rgba(199,238,254,1) 15%, rgba(236,249,255,1) 50%, rgba(199,238,254,1) 85%, rgba(106,195,246,0.9279061966583508) 100%);
   background-position: top;  
   font-family: Calibri,Tahoma, Arial;	
 	font-style: italic;
 }
 .bg {
-  background-image: url('./IMG/srodkowa_czesc_zawartosci.gif');
+  background-image: url('IMG/srodkowa_czesc_zawartosci.gif');
   background-repeat: repeat;
 }
 .up{
-  background-image: url('./IMG/gorna_czesc_zawartosci.gif');
+  background-image: url('IMG/gorna_czesc_zawartosci.gif');
   height: 17px;
   width: 1004px;
 }
 .foot{
-  background-image: url('./IMG/dolna_czesc_zawartosci.gif');
+  background-image: url('IMG/dolna_czesc_zawartosci.gif');
   height: 31px;
   width: 1004px;
 }
 .down{
-  background-image: url('./IMG/dol.gif');
+  background-image: url('IMG/dol.gif');
   height: 10px;
   width: 1004px;
 }
@@ -41,6 +45,9 @@ body, html {
 }
 .off{
   border-radius: 10px;
+  background: rgb(221,245,255);
+background: linear-gradient(270deg, rgba(221,245,255,1) 0%, rgba(240,245,247,1) 15%, rgba(255,255,255,1) 50%, rgba(240,245,247,1) 85%, rgba(221,245,255,1) 100%);
+  
 }
 .grid-container {
   display: grid;
