--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,7 @@ background: linear-gradient(270deg, rgba(106,195,246,1) 0%, rgba(199,238,254,1) 
 	font-size: 10px;
 	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
 	margin-bottom: 10px;
-	color: white;
+	color: rosybrown;
 }
 .shadow :hover{
   box-shadow: 10px 10px 27px 10px rgba(48,50,50,1) !important;
